RecipeTop/main/static/main/css/users.css
body {
  width: 100%;
  height: 100%;
  background-image: url("../img/food.png");
}

.top {
  width: 100%;
  height: 15vh;
}

.Micontainer {
  margin: 0 auto;
  background: #f5f5f5;
  font-family: "Roboto", sans-serif;
  width: 60vw;
  height: 70vh;
  border-radius: 10px;
  -webkit-box-shadow: 2px 6px 88px 5px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 2px 6px 88px 5px rgba(0, 0, 0, 0.75);
  box-shadow: 2px 6px 88px 5px rgba(0, 0, 0, 0.75);
}
.Micontainer .title {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 20%;
  width: 100%;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}
.Micontainer .title h3 {
  font-weight: 900;
}
.Micontainer .users {
  height: 70%;
  width: 100%;
  display: flex;
  justify-content: space-between;
}
.Micontainer .users .user {
  width: 25%;
  height: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-flow: column;
  padding-right: 1%;
  padding-left: 1%;
  box-sizing: border-box;
}
.Micontainer .users .user:hover {
  cursor: pointer;
}
.Micontainer .users .user .user_name {
  display: flex;
  justify-content: center;
  height: 30%;
  width: 100%;
}
.Micontainer .users .user .prefences {
  margin: 0 auto;
  display: grid;
  grid-template-columns: 0.5fr 0.5fr 0.5fr;
  width: 100%;
  height: 80%;
  justify-items: center;
  align-items: center;
}
.Micontainer .users .user .prefences img {
  width: 50%;
  height: 50%;
}
.Micontainer .users .user .user_profile {
  height: 100px;
  width: 100px;
  background-image: url("../img/chef.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-origin: center;
  -webkit-transition: all 2s ease;
  -moz-transition: all 2s ease;
  -o-transition: all 2s ease;
  -ms-transition: all 2s ease;
  transition: filter 2s ease;
}
.Micontainer #continue {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-bottom: 2px;
}
.Micontainer #continue #msg {
  font-weight: 700;
  line-height: 0px;
  font-size: 28px;
  padding: 5px 5px;
}
.Micontainer #continue #msg:hover {
  cursor: pointer;
}

.animate {
  filter: drop-shadow(2px 12px 3px rgba(0, 0, 0, 0.3));
}

.border {
  border: 1px solid gold;
  border-radius: 15px;
}

.highlight {
  font-weight: 900;
}

.glow {
  animation: glowing 5000ms infinite;
}
@keyframes glowing {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.05);
  }
  100% {
    transform: scale(1);
    color: black;
  }
}

.pref_title {
  margin: 0 auto;
  display: flex;
  align-content: center;
  justify-content: center;
}

.choices_container {
  display: grid;
  grid-template-columns: 0.5fr 0.5fr 0.5fr;
  justify-items: center;
  align-items: center;
  width: 100%;
  height: 30vh;
}
.choices_container img {
  width: 50%;
  height: 50%;
}
.choices_container img:hover {
  cursor: pointer;
}

.add_user {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 20vh;
  width: 100%;
}

/*# sourceMappingURL=users.css.map */

